--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-253.1KB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.88MB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-196.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.06MB/s(Youtube:不良林), server: 38.68.135.18, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-2.43MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-466.3KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-1.08MB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-996.7KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.31MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-802.2KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-680.0KB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.06MB/s(Youtube:不良林), server: 116.129.254.177, port: 65034, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇯🇵 日本-1.11MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇨🇳 中国-409.4KB/s(Youtube:不良林), server: cn01.downloadmovie.cn, port: 65033, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn01.downloadmovie.cn}}
+  - {name: 🇬🇧 英国-419.2KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-532.2KB/s(Youtube:不良林), server: 36.134.154.119, port: 65040, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
+  - {name: 🇨🇳 中国-322.3KB/s(Youtube:不良林), server: 36.134.154.119, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
+  - {name: 🇨🇳 中国-884.2KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-3.29MB/s(Youtube:不良林), server: 111.45.22.136, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇨🇳 中国-1.89MB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-253.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-196.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-466.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-996.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-802.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-680.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-409.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-419.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-884.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-253.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-196.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-466.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-996.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-802.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-680.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-409.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-419.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-884.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-253.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-196.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-466.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-996.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-802.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-680.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-409.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-419.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-884.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-253.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-196.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-466.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-996.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-802.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-680.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-409.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-419.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-884.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-253.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-196.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-466.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-996.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-802.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-680.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-409.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-419.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-884.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-253.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-196.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-466.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-996.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-802.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-680.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-409.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-419.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-884.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-253.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-196.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-466.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-996.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-802.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-680.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-409.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-419.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-532.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-884.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
