--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-632.3KB/s(Youtube:不良林), server: 120.233.150.146, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-5.59MB/s(Youtube:不良林), server: 36.134.154.119, port: 65040, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
-  - {name: 🇫🇷 法国-1.12MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇳 中国-594.0KB/s(Youtube:不良林), server: 116.129.254.177, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-251.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-322.3KB/s(Youtube:不良林), server: 36.134.154.119, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
-  - {name: 🇨🇳 中国-884.2KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-196.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-341.7KB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-263.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-415.3KB/s(Youtube:不良林), server: 36.134.156.5, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇨🇳 中国-1.31MB/s(Youtube:不良林), server: 36.134.154.119, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
+  - {name: 🇨🇳 中国-787.8KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
   - {name: 🇨🇳 中国-3.29MB/s(Youtube:不良林), server: 111.45.22.136, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
   - {name: 🇨🇳 中国-1.89MB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-1.15MB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65095, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-632.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-594.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-251.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-884.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-196.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-341.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-263.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-787.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-632.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-594.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-251.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-884.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-196.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-341.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-263.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-787.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-632.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-594.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-251.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-884.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-196.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-341.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-263.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-787.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
@@ -72,13 +72,13 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-632.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-594.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-251.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-884.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-196.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-341.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-263.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-787.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
@@ -87,13 +87,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-632.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-594.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-251.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-884.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-196.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-341.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-263.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-787.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
@@ -103,13 +103,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-632.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-594.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-251.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-884.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-196.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-341.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-263.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-787.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
@@ -128,13 +128,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-632.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-594.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-251.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-884.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-196.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-341.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-263.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-787.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
